# NAOSI-autoPR

./: .env.example  .gitignore  README.md  _run_common.sh  pyproject.toml  run-chat.sh  run-pr-comment.sh  run.sh
src/naosi_autopr/: __init__.py  daemon.py  pr_comment_daemon.py
