[project]
name = "naosi-autopr"
version = "0.1.0"
description = "Export QQ group chat history and drive Claude Code to prepare PRs"
readme = "README.md"
authors = [
    { name = "LangQi99", email = "2032771946@qq.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
naosi-autopr = "naosi_autopr:main"

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
